# fetch-jira-subtask-time

./: .gitignore  README.md  config-template.json  debug.json  ocean-sprint195.json  pyproject.toml  script.py
analysis-process/: output.json  script.py
fetch-board-pbis/: script.py
fetch-done-pbis/: config-template.json  config.py  script.py
fetch-sprint-backlog/: config-template.json  script.py
