[tool.poetry]
name = "cycle-time-data-fetch"
version = "0.1.0"
description = ""
authors = ["oa-takahashi <oa-takahashi@kddi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
workalendar = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
